--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-simple-tree-menu": "^1.1.18",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
